tests/ui/abi/issues/issue-22565-crablang-call.stderr
error[E0277]: functions with the "crablang-call" ABI must take a single non-self tuple argument
  --> $DIR/issue-22565-crablang-call.rs:3:1
   |
LL | extern "crablang-call" fn b(_i: i32) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `i32`

error: functions with the "crablang-call" ABI must take a single non-self tuple argument
  --> $DIR/issue-22565-crablang-call.rs:17:5
   |
LL |     extern "crablang-call" fn bar() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "crablang-call" ABI must take a single non-self tuple argument
  --> $DIR/issue-22565-crablang-call.rs:22:5
   |
LL |     extern "crablang-call" fn a() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "crablang-call" ABI must take a single non-self tuple argument
  --> $DIR/issue-22565-crablang-call.rs:7:5
   |
LL |     extern "crablang-call" fn a();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "crablang-call" ABI must take a single non-self tuple argument
  --> $DIR/issue-22565-crablang-call.rs:10:5
   |
LL |     extern "crablang-call" fn b() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `crablangc --explain E0277`.
